--- a/report-svc/src/main/resources/application.properties
+++ b/report-svc/src/main/resources/application.properties
@@ -1,7 +1,8 @@
 
-server.port=8081
+server.port=8084
 spring.application.name=report-svc
+server.servlet.context-path=/report
 
 # enable all actuator endpoints
 management.endpoints.web.exposure.include=*
-eureka.client.service-url.default-zone=http://localhost:8761/eureka
+eureka.instance.status-page-url-path=${server.servlet.context-path}/actuator/health
