--- a/disco-svc/src/main/resources/application.properties
+++ b/disco-svc/src/main/resources/application.properties
@@ -1,7 +1,10 @@
 server.port=8761
 spring.application.name=disco-svc
+# server.servlet.context-path=/disco
 
-eureka.client.fetch-registry=false
-eureka.client.register-with-eureka=false
+eureka.instance.hostname=localhost
+eureka.client.service-url.default-zone=http://${eureka.instance.hostname}:8761/eureka
+eureka.instance.status-page-url-path=/actuator/health
+
 logging.level.com.netflix.eureka=OFF
 logging.level.com.netflix.discovery=OFF
