--- a/ui-svc/src/main/resources/application.properties
+++ b/ui-svc/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-server.port=8080
+server.port=8082
 spring.application.name=ui-svc
+server.servlet.context-path=/ui
 
 # enable all actuator endpoints
 management.endpoints.web.exposure.include=*
-
-eureka.client.service-url.default-zone=http://localhost:8761/eureka
+eureka.instance.status-page-url-path=/actuator/health
