--- a/valid-svc/src/main/resources/application.properties
+++ b/valid-svc/src/main/resources/application.properties
@@ -1,7 +1,8 @@
 
-server.port=8082
+server.port=8086
 spring.application.name=valid-svc
+server.servlet.context-path=/valid
 
 # enable all actuator endpoints
 management.endpoints.web.exposure.include=*
-eureka.client.service-url.default-zone=http://localhost:8761/eureka
+eureka.instance.status-page-url-path=${server.servlet.context-path}/actuator/health
