--- a/config-svc/src/main/resources/application.properties
+++ b/config-svc/src/main/resources/application.properties
@@ -2,9 +2,8 @@ server.port=8090
 spring.application.name=config-svc
 
 management.endpoints.web.exposure.include=*
-eureka.instance.hostname=localhost
-eureka.client.service-url.default-zone=http://${eureka.instance.hostname}:8761/eureka
 eureka.instance.status-page-url-path=/actuator/health
 
 spring.cloud.config.server.git.uri=https://github.com/kbaynes/sck-config-1
+spring.cloud.config.server.git.force-pull=true
 spring.cloud.config.server.clone-on-start=true
