--- a/gateway-svc/src/main/resources/application.properties
+++ b/gateway-svc/src/main/resources/application.properties
@@ -5,6 +5,7 @@ spring.application.name=gateway-svc
 
 # enable all actuator endpoints
 management.endpoints.web.exposure.include=*,hystrix.stream
-eureka.instance.hostname=localhost
-eureka.client.service-url.default-zone=http://${eureka.client.hostname}:8761/eureka
 eureka.instance.status-page-url-path=/actuator/health
+
+spring.cloud.config.enabled=true
+spring.cloud.config.uri=http://localhost:8090
