--- a/report-svc/src/main/resources/application-docker.properties
+++ b/report-svc/src/main/resources/application-docker.properties
@@ -1,3 +1,5 @@
 eureka.client.serviceUrl.defaultZone=http://disco:8761/eureka
 spring.cloud.config.discovery.enabled=true
 spring.cloud.config.discovery.serviceId=config-svc
+
+spring.zipkin.base-url=http://zipkin:9411
