--- a/valid-svc/src/main/resources/application.properties
+++ b/valid-svc/src/main/resources/application.properties
@@ -6,3 +6,9 @@ server.servlet.context-path=/valid
 # enable all actuator endpoints
 management.endpoints.web.exposure.include=*
 eureka.instance.status-page-url-path=${server.servlet.context-path}/actuator/health
+
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
+spring.cloud.config.discovery.enabled=true
+spring.cloud.config.discovery.serviceId=config-svc
+
+spring.zipkin.baseUrl=http://localhost:9411
