--- a/config-svc/src/main/resources/application.properties
+++ b/config-svc/src/main/resources/application.properties
@@ -1,4 +1,5 @@
-server.port=8090
+# 8888 is default port for Config Server in Spring Cloud
+server.port=8888
 spring.application.name=config-svc
 
 management.endpoints.web.exposure.include=*
