--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,7 @@
 {
     "java.configuration.updateBuildConfiguration": "automatic",
-    "editor.tabSize": 2
+    "editor.tabSize": 2,
+    "vs-kubernetes": {
+        "disable-linters": ["resource-limits"],
+    },
 }
