--- a/gateway-svc/src/main/resources/application.properties
+++ b/gateway-svc/src/main/resources/application.properties
@@ -1,11 +1,8 @@
 
-server.port=8080
-spring.application.name=gateway-svc
-# server.servlet.context-path=/gateway
+# server.port=8080
+# spring.application.name=gateway-svc
+# # server.servlet.context-path=/gateway
 
-# enable all actuator endpoints
-management.endpoints.web.exposure.include=*,hystrix.stream
-eureka.instance.status-page-url-path=/actuator/health
-
-spring.cloud.config.enabled=true
-spring.cloud.config.uri=http://localhost:8090
+# # enable all actuator endpoints
+# management.endpoints.web.exposure.include=*,hystrix.stream
+# eureka.instance.status-page-url-path=/actuator/health
