--- a/report-svc/pom.xml
+++ b/report-svc/pom.xml
@@ -91,5 +91,9 @@
       <groupId>org.springframework.cloud</groupId>
       <artifactId>spring-cloud-starter-sleuth</artifactId>
     </dependency>
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-bootstrap</artifactId>
+	 </dependency>
 	</dependencies>
 </project>
